--- a/index.html
+++ b/index.html
@@ -92,6 +92,21 @@ function loadImg(src){
   _IMG_CACHE.set(src,i);
   return i;
 }
+
+// --- ARBRES PNG (à la racine du projet, sinon ajuste les chemins) ---
+const TREE_PNG = {
+  chene: 'chene.png',
+  pin:   'pin.png'
+};
+
+// Choix stable (même case -> même image) en fonction de la case et du niveau
+function pickTreeSpriteAt(x, y){
+  // hash simple et stable basé sur coord + index de niveau
+  const h = (((x*73856093) ^ (y*19349663) ^ (LEVEL_INDEX*83492791)) >>> 0);
+  return (h & 1) ? TREE_PNG.pin : TREE_PNG.chene;
+}
+
+  
 function getSpritePath(speciesId, forUI=false){
   const rec = SPRITES_BY_SPECIES[speciesId];
   if(!rec) return null;
@@ -413,19 +428,6 @@ const BIOMES=[
 let LEVEL_INDEX=0; let BIOME=BIOMES[0];
 const LEVEL_SEEDS=Array.from({length:12},(_,i)=> (i+1)*1337+(i*i*97));
 
-/* Jeux d’arbres par niveau (N1 = conifères) */
-const TREE_SETS = [
-  ['🌲','🌲','🌲','🌲','🌲'],                           // 0: conifères (niveau 1)
-  ['🌳','🌿','🍃','🌴','🎋'],                           // 1: feuillus / tropical
-  ['🍁','🍂','🌾','🍃','🌳'],                           // 2: automnal / champs
-  ['🌵','🌴','🎍','🎋','🌳']                            // 3: aride / tropical
-];
-let WALL_EMOJI_SET = TREE_SETS[0];
-function treeEmojiAt(x,y){
-  const i = ( (x*73856093) ^ (y*19349663) ^ (LEVEL_INDEX*83492791) ) >>> 0;
-  return WALL_EMOJI_SET[i % WALL_EMOJI_SET.length];
-}
-
 function mulberry32(seed){ let a=(seed>>>0)||0x9E3779B9; return function(){ let t=a+=0x6D2B79F5; t=Math.imul(t^(t>>>15),t|1); t^=t+Math.imul(t^(t>>>7),t|61); return ((t^(t>>>14))>>>0)/4294967296; }; }
 function isGridShape(grid,c,r){ if(!Array.isArray(grid)||grid.length!==r) return false; for(let y=0;y<r;y++){ if(!Array.isArray(grid[y])||grid[y].length!==c) return false; } return true; }
 function genLevel(seed){ const rng=mulberry32(seed==null? (Math.random()*1e9)|0:seed); let maze=createMaze(COLS,ROWS,rng); if(!isGridShape(maze,COLS,ROWS)) maze=createMaze(COLS,ROWS,mulberry32(0xDEADBEEF)); decorateMaze(maze,rng); return maze; }
@@ -502,8 +504,7 @@ function resetMatch(full){
 
 function loadLevel(i,first=false){
   BIOME=BIOMES[i%BIOMES.length];
-  WALL_EMOJI_SET = TREE_SETS[i % TREE_SETS.length]; // variété par niveau (N1 = conifères)
-  const seed=LEVEL_SEEDS[i%LEVEL_SEEDS.length]+i*101;
+    const seed=LEVEL_SEEDS[i%LEVEL_SEEDS.length]+i*101;
   Game.grid=genLevel(seed);
   Game.traps=[]; Game.bonuses=[]; Game.parasites=[]; Game.particles=[];
   Game.muscariaTrap1=null; Game.muscariaTrap2=null; Game.remaining=0;
@@ -649,18 +650,24 @@ function buildLayers(){
   Game.wallsLayer=walls; Game.pelletsLayer=pellets;
 }
 function drawWallCell(ctx,x,y){
-  const px=x*TILE,py=y*TILE;
+  const px=x*TILE, py=y*TILE;
+
+  // fond du mur
   ctx.fillStyle=BIOME.wall; ctx.fillRect(px,py,TILE,TILE);
   ctx.fillStyle=BIOME.moss; ctx.fillRect(px,py,TILE,4); ctx.fillRect(px,py,4,TILE);
   ctx.fillStyle='#00000033'; ctx.fillRect(px,py+TILE-4,TILE,4); ctx.fillRect(px+TILE-4,py,4,TILE);
-  // --- Emoji arbre au centre (variété par niveau) ---
-  const emoji = treeEmojiAt(x,y);
-  ctx.font = '16px system-ui';
-  ctx.textAlign='center'; ctx.textBaseline='middle';
-  ctx.globalAlpha=0.95;
-  ctx.fillText(emoji, px+TILE/2, py+TILE/2);
-  ctx.globalAlpha=1;
+
+  // --- IMAGE PNG au centre (remplace l'emoji) ---
+  const path = pickTreeSpriteAt(x,y);
+  const img  = loadImg(path);
+  if (img.complete){
+    const S = Math.round(TILE * 0.62);         // taille de l’icône (≈ 17 px si TILE=28)
+    const ox = px + ((TILE - S) / 2) | 0;      // centrage
+    const oy = py + ((TILE - S) / 2) | 0;
+    ctx.drawImage(img, ox, oy, S, S);
+  }
 }
+
 function drawPellet(ctx,x,y){ const px=x*TILE+TILE/2, py=y*TILE+TILE/2; ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(px,py,3,0,6.28); ctx.fill(); }
 
 /* =================== IA, GAMEPLAY & RENDU =================== */
