--- a/index.html
+++ b/index.html
@@ -649,29 +649,25 @@ function buildLayers(){
   }
   Game.wallsLayer=walls; Game.pelletsLayer=pellets;
 }
-function drawWallCell(ctx,x,y){
-  const px=x*TILE, py=y*TILE;
+function drawWallCell(ctx, x, y) {
+  const px = x * TILE, py = y * TILE;
 
-  // fond du mur
-  ctx.fillStyle=BIOME.wall; ctx.fillRect(px,py,TILE,TILE);
-  ctx.fillStyle=BIOME.moss; ctx.fillRect(px,py,TILE,4); ctx.fillRect(px,py,4,TILE);
-  ctx.fillStyle='#00000033'; ctx.fillRect(px,py+TILE-4,TILE,4); ctx.fillRect(px+TILE-4,py,4,TILE);
-
-  // --- IMAGE PNG au centre ---
-  const path = pickTreeSpriteAt(x,y);
+  const path = pickTreeSpriteAt(x, y);
   const img  = loadImg(path);
-  const S  = Math.round(TILE * 0.62);
-  const ox = (px + (TILE - S) / 2) | 0;
-  const oy = (py + (TILE - S) / 2) | 0;
+
+  // On déborde de 1px de chaque côté : -1, +2
+  const bleed = 1;
+  const ox = px - bleed;
+  const oy = py - bleed;
+  const S  = TILE + bleed * 2;
 
   if (img.complete) {
     ctx.drawImage(img, ox, oy, S, S);
   } else {
-    // IMPORTANT: ne pas écraser d’autres handlers
-    const drawOnce = () => ctx.drawImage(img, ox, oy, S, S);
-    img.addEventListener('load', drawOnce, { once:true });
+    img.addEventListener('load', () => ctx.drawImage(img, ox, oy, S, S), { once:true });
   }
 }
+
 
 
 function drawPellet(ctx,x,y){ const px=x*TILE+TILE/2, py=y*TILE+TILE/2; ctx.fillStyle='#fff'; ctx.beginPath(); ctx.arc(px,py,3,0,6.28); ctx.fill(); }
